--- a/AquaMqttLogger/platformio.ini
+++ b/AquaMqttLogger/platformio.ini
@@ -10,11 +10,22 @@
 
 [env:nanoatmega328new]
 platform = atmelavr
-board = nanoatmega328new
+;board = nanoatmega328new
+board = megaatmega2560
 framework = arduino
-upload_port = net:192.168.188.50:23
+;upload_port = net:192.168.188.50:23
+;upload_port = net:192.168.188.51:23
 lib_deps =
     locoduino/RingBuffer
+    ledongthuc/CustomSoftwareSerial
     FrankBoesing/FastCRC
+    PaulStoffregen/Time
     https://github.com/jeelabs/el-client
 
+;[env:megaatmega2560]
+;platform = atmelavr
+;board = megaatmega2560
+;framework = arduino
+;upload_port = net:192.168.188.51:23
+;lib_deps =
+;    FrankBoesing/FastCRC
