feat(prototype): proof controlability of heatpump (#4)
Added simple sketch which simulates the main controller.
Added functionality to control the heatpump to AquaMQTTLogger.
Updated Documentation and Roadmap

Proof of communication to hmi controller and main controller.

--- a/AquaSimuUno/platformio.ini
+++ b/AquaSimuUno/platformio.ini
@@ -8,24 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328new]
+[env:uno]
 platform = atmelavr
-;board = nanoatmega328new
-board = megaatmega2560
+board = uno
 framework = arduino
-;upload_port = net:192.168.188.50:23
-;upload_port = net:192.168.188.51:23
 lib_deps =
-    locoduino/RingBuffer
-    ledongthuc/CustomSoftwareSerial
     FrankBoesing/FastCRC
-    PaulStoffregen/Time
-    https://github.com/jeelabs/el-client
-
-;[env:megaatmega2560]
-;platform = atmelavr
-;board = megaatmega2560
-;framework = arduino
-;upload_port = net:192.168.188.51:23
-;lib_deps =
-;    FrankBoesing/FastCRC
