--- a/AquaMQTT/platformio.ini
+++ b/AquaMQTT/platformio.ini
@@ -8,10 +8,26 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
-platform = atmelavr
-board = uno
+[env]
+test_framework = googletest
+
+[env:native]
+platform = native
+
+[env:arduino_nano_esp32]
+platform = espressif32
+board = arduino_nano_esp32
 framework = arduino
+test_framework = googletest
+build_flags = -std=c++11
+#upload_protocol = espota
+#upload_port = 192.168.188.62
 lib_deps =
+    locoduino/RingBuffer
     FrankBoesing/FastCRC
-targets = upload
+    PaulStoffregen/Time
+    256dpi/MQTT
+    adafruit/Adafruit BusIO
+    adafruit/RTClib
+    Wire
+    SPI
