--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
 
       - name: Build PlatformIO Project
         working-directory: ./AquaMQTT
-        run: pio run
+        run: pio run -e arduino_nano_esp32
