--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,5 @@ jobs:
         run: pip install --upgrade platformio
 
       - name: Build PlatformIO Project
-        working-directory: ./AquaMqttLogger
-        run: pio run
+        working-directory: ./AquaMQTT
+        run: pio run -e arduino_nano_esp32
