fix(temp, installationConfig, watchdog): fixes various issues

--- a/AquaMQTT/platformio.ini
+++ b/AquaMQTT/platformio.ini
@@ -13,6 +13,9 @@ test_framework = googletest
 
 [env:native]
 platform = native
+build_src_filter = src/**
+lib_deps =
+    googletest
 
 [env:arduino_nano_esp32]
 platform = espressif32
