--- a/tools/AquaDebug/platformio.ini
+++ b/tools/AquaDebug/platformio.ini
@@ -24,14 +24,8 @@ framework = arduino
 test_framework = googletest
 build_flags = -std=c++11
 # uncomment the below lines to use over the air update
-upload_protocol = espota
-upload_port = 192.168.188.62
+# upload_protocol = espota
+# upload_port = 192.168.188.62
 lib_deps =
     locoduino/RingBuffer
-    FrankBoesing/FastCRC
-    PaulStoffregen/Time
     256dpi/MQTT
-    adafruit/Adafruit BusIO
-    adafruit/RTClib
-    Wire
-    SPI
