--- a/AquaMQTT/platformio.ini
+++ b/AquaMQTT/platformio.ini
@@ -18,7 +18,7 @@ lib_deps =
     googletest
 
 [env:arduino_nano_esp32]
-platform = espressif32@6.8.1
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
 board = arduino_nano_esp32
 framework = arduino
 test_framework = googletest
