chore(various): enable unittests in ci, pin library versions, adapt watchdog, remove magic numbers

--- a/AquaMQTT/platformio.ini
+++ b/AquaMQTT/platformio.ini
@@ -27,12 +27,13 @@ build_flags = -std=c++11
 #upload_protocol = espota
 #upload_port = 192.168.188.62
 lib_deps =
-    locoduino/RingBuffer
-    FrankBoesing/FastCRC
-    PaulStoffregen/Time
-    256dpi/MQTT
-    adafruit/Adafruit BusIO
-    adafruit/RTClib
-    Wire
-    SPI
-    https://github.com/denyssene/SimpleKalmanFilter.git
+    locoduino/RingBuffer@1.0.5
+    FrankBoesing/FastCRC@1.41.0
+    PaulStoffregen/Time@1.6.1
+    256dpi/MQTT@2.5.2
+    adafruit/Adafruit BusIO@1.16.1
+    adafruit/RTClib@2.1.4
+    Wire@3.0.5
+    SPI@3.0.5
+    https://github.com/denyssene/SimpleKalmanFilter.git#v0.2
+    ArduinoJSON@7.2.0
