--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,9 @@ jobs:
           python-version: '3.9'
       - name: Install PlatformIO Core
         run: pip install --upgrade platformio
-
       - name: Build PlatformIO Project
         working-directory: ./AquaMQTT
         run: pio run -e arduino_nano_esp32
+      - name: Run Unittest
+        working-directory: ./AquaMQTT
+        run: pio test -e native 
