Added option for uploading with Esptool in Platformio

--- a/AquaMQTT/platformio.ini
+++ b/AquaMQTT/platformio.ini
@@ -23,6 +23,8 @@ board = arduino_nano_esp32
 framework = arduino
 test_framework = googletest
 build_flags = -std=c++11
+# uncomment the next line if you have error when you upload the firmware (Error 74)
+#upload_protocol = esptool
 # uncomment the below lines to use over the air update
 #upload_protocol = espota
 #upload_port = 192.168.188.62
