--- a/aquamqtt.yaml
+++ b/aquamqtt.yaml
@@ -401,12 +401,19 @@ mqtt:
   water_heater:
     - name: "AquaMQTT boiler"
       icon: mdi:water-boiler
+      modes:
+      - "ABSENCE"
+      - "AUTO"
+      - "BOOST"
+      - "MAN ECO OFF"
+      - "MAN ECO ON"
+      mode_state_topic: "aquamqtt/hmi/operationMode"
+      mode_command_topic: "aquamqtt/ctrl/operationMode"
       temperature_state_topic: "aquamqtt/hmi/waterTempTarget"
       temperature_command_topic: "aquamqtt/ctrl/waterTempTarget"
       current_temperature_topic: "aquamqtt/main/waterTemp"
       unique_id: atlantic_water_boiler_thermostat
-      precision: 0.5
-   
+      precision: 1.0
   button:
     - name: "Reset Overrides"
       command_topic: "aquamqtt/ctrl/reset"
