--- a/tools/AquaDebug/platformio.ini
+++ b/tools/AquaDebug/platformio.ini
@@ -18,7 +18,7 @@ lib_deps =
     googletest
 
 [env:arduino_nano_esp32]
-platform = espressif32
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
 board = arduino_nano_esp32
 framework = arduino
 test_framework = googletest
@@ -27,5 +27,5 @@ build_flags = -std=c++11
 # upload_protocol = espota
 # upload_port = 192.168.188.62
 lib_deps =
-    locoduino/RingBuffer
-    256dpi/MQTT
+    locoduino/RingBuffer@1.0.5
+    256dpi/MQTT@2.5.2
