feat(platformio): add environment for esp32-s3-devkitc-1

--- a/AquaMQTT/platformio.ini
+++ b/AquaMQTT/platformio.ini
@@ -9,17 +9,6 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env]
-test_framework = googletest
-
-[env:native]
-platform = native
-build_src_filter = src/**
-lib_deps =
-    googletest
-
-[env:arduino_nano_esp32]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
-board = arduino_nano_esp32
 framework = arduino
 test_framework = googletest
 build_flags = -std=c++11
@@ -39,3 +28,18 @@ lib_deps =
     SPI@3.0.5
     https://github.com/denyssene/SimpleKalmanFilter.git#v0.2
     ArduinoJSON@7.2.0
+
+[env:native]
+platform = native
+build_src_filter = src/**
+lib_deps =
+    googletest
+
+[env:arduino_nano_esp32]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
+board = arduino_nano_esp32
+
+[env:esp32-s3-devkitc-1]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
+board = esp32-s3-devkitc-1
+board_build.mcu = esp32s3
