--- a/tools/AquaDebug/platformio.ini
+++ b/tools/AquaDebug/platformio.ini
@@ -9,7 +9,15 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env]
+framework = arduino
 test_framework = googletest
+build_flags = -std=c++11
+# uncomment the below lines to use over the air update
+# upload_protocol = espota
+# upload_port = 192.168.188.62
+lib_deps =
+    locoduino/RingBuffer@1.0.5
+    256dpi/MQTT@2.5.2
 
 [env:native]
 platform = native
@@ -20,12 +28,9 @@ lib_deps =
 [env:arduino_nano_esp32]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
 board = arduino_nano_esp32
-framework = arduino
-test_framework = googletest
-build_flags = -std=c++11
-# uncomment the below lines to use over the air update
-# upload_protocol = espota
-# upload_port = 192.168.188.62
-lib_deps =
-    locoduino/RingBuffer@1.0.5
-    256dpi/MQTT@2.5.2
+
+[env:esp32-s3-devkitc-1]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
+board = esp32-s3-devkitc-1
+board_build.mcu = esp32s3
+
