--- a/AquaMQTT/platformio.ini
+++ b/AquaMQTT/platformio.ini
@@ -10,19 +10,6 @@
 
 [env]
 test_framework = googletest
-
-[env:native]
-platform = native
-build_src_filter = src/**
-lib_deps =
-    googletest
-
-[env:arduino_nano_esp32]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
-board = arduino_nano_esp32
-framework = arduino
-test_framework = googletest
-build_flags = -std=c++11
 # uncomment the next line if you have error when you upload the firmware (Error 74)
 #upload_protocol = esptool
 # uncomment the below lines to use over the air update
@@ -39,3 +26,22 @@ lib_deps =
     SPI@3.0.5
     https://github.com/denyssene/SimpleKalmanFilter.git#v0.2
     ArduinoJSON@7.2.0
+
+[env:native]
+platform = native
+build_src_filter = src/**
+lib_deps =
+    googletest
+
+[env:arduino_nano_esp32]
+framework = arduino
+build_flags = -std=c++11
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
+board = arduino_nano_esp32
+
+[env:esp32-s3-devkitc-1]
+framework = arduino
+build_flags = -std=c++11
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
+board = esp32-s3-devkitc-1
+board_build.mcu = esp32s3
