build(esp32-devkit): apply suggestions from community

--- a/AquaMQTT/platformio.ini
+++ b/AquaMQTT/platformio.ini
@@ -41,7 +41,11 @@ board = arduino_nano_esp32
 
 [env:esp32-s3-devkitc-1]
 framework = arduino
-build_flags = -std=c++11
+build_flags =
+    -std=c++11
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DARDUINO_USB_DFU_ON_BOOT=1
+    -DENV_DEVKIT_ESP32
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
 board = esp32-s3-devkitc-1
 board_build.mcu = esp32s3
