--- a/AquaMQTT/platformio.ini
+++ b/AquaMQTT/platformio.ini
@@ -49,3 +49,6 @@ build_flags =
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
 board = esp32-s3-devkitc-1
 board_build.mcu = esp32s3
+upload_port= COM17
+board_build.filesystem = littlefs
+board_build.partitions = default_8MB.csv
