--- a/AquaMQTT/platformio.ini
+++ b/AquaMQTT/platformio.ini
@@ -38,6 +38,7 @@ framework = arduino
 build_flags = -std=c++11
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
 board = arduino_nano_esp32
+board_build.filesystem = littlefs
 
 [env:esp32-s3-devkitc-1]
 framework = arduino
@@ -49,6 +50,5 @@ build_flags =
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
 board = esp32-s3-devkitc-1
 board_build.mcu = esp32s3
-upload_port= COM17
 board_build.filesystem = littlefs
-board_build.partitions = default_8MB.csv
+
