--- a/AquaMQTT/platformio.ini
+++ b/AquaMQTT/platformio.ini
@@ -26,6 +26,7 @@ lib_deps =
     SPI@3.0.5
     https://github.com/denyssene/SimpleKalmanFilter.git#v0.2
     ArduinoJSON@7.2.0
+    esp32async/ESPAsyncWebServer@^3.7.4
 
 [env:native]
 platform = native
